Updated tool stack to latest eclipse/mylyn Updated build stack to JDK17 and latest tycho